[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv_project"
version = "0.1.0"
description = "OpenEnv Hackathon project for multi-mode API submission"
authors = [
    { name = "Naga Teja Susmitha", email = "teja.peravali0@gmail.com" }
]
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "fastapi",
    "uvicorn"
]