[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv_project"
version = "0.1.0"
description = "FastAPI project for OpenEnv Hackathon"
authors = [{name = "Teja Susmitha", email = "teja.peravali0@gmail.com"}]

# List all your Python dependencies here
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv>=0.2.0"
]

[project.scripts]
# This tells OpenEnv how to start your app
server = "inference:app"